--- a/packages/com.sonosthesia.utils/Runtime/Sonosthesia.Utils.asmdef
+++ b/packages/com.sonosthesia.utils/Runtime/Sonosthesia.Utils.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Sonosthesia.Utils",
     "rootNamespace": "Sonosthesia.Utils",
-    "references": [],
+    "references": [
+        "GUID:d8b63aba1907145bea998dd612889d6b"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
