--- a/packages/com.sonosthesia.flow/Runtime/Sonosthesia.Flow.asmdef
+++ b/packages/com.sonosthesia.flow/Runtime/Sonosthesia.Flow.asmdef
@@ -2,6 +2,7 @@
     "name": "Sonosthesia.Flow",
     "rootNamespace": "",
     "references": [
+        "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2"
