--- a/packages/com.sonosthesia.builder/Runtime/Sonosthesia.Builder.asmdef
+++ b/packages/com.sonosthesia.builder/Runtime/Sonosthesia.Builder.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:d8b63aba1907145bea998dd612889d6b",
-        "GUID:2665a8d13d1b3f18800f46e256720795"
+        "GUID:2665a8d13d1b3f18800f46e256720795",
+        "GUID:d13cd110c9ead484abd4d8de740b818b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
