--- a/unity/UnityProject/Packages/manifest.json
+++ b/unity/UnityProject/Packages/manifest.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
     "com.sonosthesia.adaptivemidi": "file:../../../packages/com.sonosthesia.adaptivemidi",
+    "com.sonosthesia.audio": "file:../../../packages/com.sonosthesia.audio",
     "com.sonosthesia.builder": "file:../../../packages/com.sonosthesia.builder",
     "com.sonosthesia.flow": "file:../../../packages/com.sonosthesia.flow",
     "com.sonosthesia.link": "file:../../../packages/com.sonosthesia.link",
     "com.sonosthesia.midi": "file:../../../packages/com.sonosthesia.midi",
-    "com.sonosthesia.audio": "file:../../../packages/com.sonosthesia.audio",
     "com.sonosthesia.pack": "file:../../../packages/com.sonosthesia.pack",
     "com.sonosthesia.rtmidi": "file:../../../packages/com.sonosthesia.rtmidi",
     "com.sonosthesia.spawn": "file:../../../packages/com.sonosthesia.spawn",
@@ -17,6 +17,7 @@
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.6.1",
+    "com.unity.recorder": "4.0.1",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
