--- a/unity/UnityProject/Packages/manifest.json
+++ b/unity/UnityProject/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.sonosthesia.spawn": "file:../../../packages/com.sonosthesia.spawn",
     "com.sonosthesia.touch": "file:../../../packages/com.sonosthesia.touch",
     "com.sonosthesia.utils": "file:../../../packages/com.sonosthesia.utils",
+    "com.sonosthesia.visualflow": "file:../../../packages/com.sonosthesia.visualflow",
     "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.0.4",
     "com.unity.ide.rider": "3.0.21",
