--- a/packages/com.sonosthesia.visualflow/Runtime/Sonosthesia.Visualflow.asmdef
+++ b/packages/com.sonosthesia.visualflow/Runtime/Sonosthesia.Visualflow.asmdef
@@ -2,8 +2,12 @@
     "name": "Sonosthesia.VisualFlow",
     "rootNamespace": "Sonosthesia.VisualFlow",
     "references": [
+        "GUID:21b0c8d1703a94250bfac916590cea4f",
+        "GUID:ea715009a4efd4c6cbc85be3ae097dd3",
+        "GUID:315d634a9ac6d460a9515f5a56be6311",
+        "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:d13cd110c9ead484abd4d8de740b818b",
-        "GUID:21b0c8d1703a94250bfac916590cea4f"
+        "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
