--- a/packages/com.sonosthesia.audio/package.json
+++ b/packages/com.sonosthesia.audio/package.json
@@ -2,7 +2,8 @@
   "author": "Jonathan Thorpe",
   "dependencies": {
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.flow": "1.0.0"
+    "com.sonosthesia.flow": "1.0.0",
+    "com.sonosthesia.utils": "1.0.0"
   },
   "description": "Sonosthesia unity audio",
   "displayName": "Sonosthesia Audio",
