--- a/packages/com.sonosthesia.flow/package.json
+++ b/packages/com.sonosthesia.flow/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "com.cysharp.unitask": "2.3.3",
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.utils": "1.0.0"
+    "com.sonosthesia.utils": "1.0.0",
+    "com.sonosthesia.processing": "1.0.0"
   },
   "description": "Sonosthesia unity flow",
   "displayName": "Sonosthesia Flow",
