--- a/packages/com.sonosthesia.builder/Runtime/Sonosthesia.Builder.asmdef
+++ b/packages/com.sonosthesia.builder/Runtime/Sonosthesia.Builder.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:2665a8d13d1b3f18800f46e256720795",
-        "GUID:d13cd110c9ead484abd4d8de740b818b"
+        "GUID:d13cd110c9ead484abd4d8de740b818b",
+        "GUID:21d1eb854b91ade49bc69a263d12bee2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
