--- a/tools/package.json
+++ b/tools/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "args-parser": "^1.3.0",
-    "prettyjson": "^1.2.5"
+    "prettyjson": "^1.2.5",
+    "semver": "^7.5.4"
   }
 }
