--- a/packages/com.sonosthesia.flow/package.json
+++ b/packages/com.sonosthesia.flow/package.json
@@ -3,12 +3,14 @@
   "dependencies": {
     "com.cysharp.unitask": "2.3.3",
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.utils": "1.0.0",
-    "com.sonosthesia.processing": "1.0.0"
+    "com.sonosthesia.utils": "1.0.2",
+    "com.sonosthesia.processing": "1.0.2"
   },
   "description": "Sonosthesia unity flow",
   "displayName": "Sonosthesia Flow",
-  "keywords": [ "unity" ],
+  "keywords": [
+    "unity"
+  ],
   "license": "Unlicense",
   "name": "com.sonosthesia.flow",
   "repository": "github:jbat100/sonosthesia-unity-flow",
