--- a/packages/com.sonosthesia.midi/package.json
+++ b/packages/com.sonosthesia.midi/package.json
@@ -2,12 +2,14 @@
   "author": "Jonathan Thorpe",
   "dependencies": {
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.adaptivemidi": "1.0.0",
-    "com.sonosthesia.flow": "1.0.0"
+    "com.sonosthesia.adaptivemidi": "1.0.2",
+    "com.sonosthesia.flow": "1.0.2"
   },
   "description": "Sonosthesia unity midi",
   "displayName": "Sonosthesia MIDI",
-  "keywords": [ "unity" ],
+  "keywords": [
+    "unity"
+  ],
   "license": "Unlicense",
   "name": "com.sonosthesia.midi",
   "repository": "github:jbat100/sonosthesia-unity-midi",
