--- a/packages/com.sonosthesia.pack/package.json
+++ b/packages/com.sonosthesia.pack/package.json
@@ -2,11 +2,13 @@
   "author": "Jonathan Thorpe",
   "dependencies": {
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.flow": "1.0.1"
+    "com.sonosthesia.flow": "1.0.2"
   },
   "description": "Sonosthesia unity message pack connections",
   "displayName": "Sonosthesia Pack",
-  "keywords": [ "unity" ],
+  "keywords": [
+    "unity"
+  ],
   "license": "Unlicense",
   "name": "com.sonosthesia.pack",
   "repository": "github:jbat100/sonosthesia-unity-packages",
