--- a/packages/com.sonosthesia.rtmidi/package.json
+++ b/packages/com.sonosthesia.rtmidi/package.json
@@ -3,11 +3,13 @@
   "dependencies": {
     "jp.keijiro.rtmidi": "1.0.4",
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.midi": "1.0.1"
+    "com.sonosthesia.midi": "1.0.2"
   },
   "description": "Sonosthesia unity Rt midi",
   "displayName": "Sonosthesia RtMIDI",
-  "keywords": [ "unity" ],
+  "keywords": [
+    "unity"
+  ],
   "license": "Unlicense",
   "name": "com.sonosthesia.rtmidi",
   "repository": "github:jbat100/sonosthesia-unity-rtmidi",
