--- a/packages/com.sonosthesia.touch/package.json
+++ b/packages/com.sonosthesia.touch/package.json
@@ -3,11 +3,13 @@
   "dependencies": {
     "com.unity.mathematics": "1.2.6",
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.flow": "1.0.0"
+    "com.sonosthesia.flow": "1.0.2"
   },
   "description": "Sonosthesia unity touch",
   "displayName": "Sonosthesia Touch",
-  "keywords": [ "unity" ],
+  "keywords": [
+    "unity"
+  ],
   "license": "Unlicense",
   "name": "com.sonosthesia.touch",
   "repository": "github:jbat100/sonosthesia-unity-touch",
