--- a/packages/com.sonosthesia.vfx/package.json
+++ b/packages/com.sonosthesia.vfx/package.json
@@ -1,7 +1,9 @@
 {
   "author": "Jonathan Thorpe",
   "dependencies": {
-    "com.neuecc.unirx": "7.1.0"
+    "com.neuecc.unirx": "7.1.0",
+    "com.sonosthesia.flow": "1.0.2",
+    "com.sonosthesia.spawn": "1.0.2"
   },
   "description": "Sonosthesia vfx",
   "displayName": "Sonosthesia VFX",
