--- a/packages/com.sonosthesia.utils/Runtime/Sonosthesia.Utils.asmdef
+++ b/packages/com.sonosthesia.utils/Runtime/Sonosthesia.Utils.asmdef
@@ -2,7 +2,8 @@
     "name": "Sonosthesia.Utils",
     "rootNamespace": "Sonosthesia.Utils",
     "references": [
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:21d1eb854b91ade49bc69a263d12bee2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
