--- a/packages/com.sonosthesia.utils/package.json
+++ b/packages/com.sonosthesia.utils/package.json
@@ -2,7 +2,8 @@
   "author": "Jonathan Thorpe",
   "dependencies": {
     "com.neuecc.unirx": "7.1.0",
-    "com.unity.mathematics": "1.2.6"
+    "com.unity.mathematics": "1.2.6",
+    "com.unity.splines": "2.4.0"
   },
   "description": "Sonosthesia utils",
   "displayName": "Sonosthesia Utils",
