Live to Unity mpe relay works

--- a/packages/com.sonosthesia.pack/Runtime/Sonosthesia.Pack.asmdef
+++ b/packages/com.sonosthesia.pack/Runtime/Sonosthesia.Pack.asmdef
@@ -9,7 +9,8 @@
         "GUID:04376767bc1f3b428aefa3d20743e819",
         "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2",
         "GUID:d13cd110c9ead484abd4d8de740b818b",
-        "GUID:6c6dc842e821b4881bee7a84bbd34b94"
+        "GUID:6c6dc842e821b4881bee7a84bbd34b94",
+        "GUID:38486b356fe2649a3abdb6285911b25d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
