--- a/packages/com.sonosthesia.pack/package.json
+++ b/packages/com.sonosthesia.pack/package.json
@@ -2,7 +2,8 @@
   "author": "Jonathan Thorpe",
   "dependencies": {
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.flow": "1.0.2"
+    "com.sonosthesia.flow": "1.0.2",
+    "com.sonosthesia.midi": "1.0.2"
   },
   "description": "Sonosthesia unity message pack connections",
   "displayName": "Sonosthesia Pack",
