--- a/packages/com.sonosthesia.utils/Runtime/Sonosthesia.Utils.asmdef
+++ b/packages/com.sonosthesia.utils/Runtime/Sonosthesia.Utils.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "Sonosthesia.Utils",
     "references": [
         "GUID:d8b63aba1907145bea998dd612889d6b",
-        "GUID:21d1eb854b91ade49bc69a263d12bee2"
+        "GUID:21d1eb854b91ade49bc69a263d12bee2",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
