--- a/packages/com.sonosthesia.instrument/package.json
+++ b/packages/com.sonosthesia.instrument/package.json
@@ -4,7 +4,10 @@
     "com.unity.mathematics": "1.2.6",
     "com.neuecc.unirx": "7.1.0",
     "com.sonosthesia.midi": "1.0.2",
-    "com.sonosthesia.touch": "1.0.2"
+    "com.sonosthesia.touch": "1.0.2",
+    "com.sonosthesia.channel": "1.0.2",
+    "com.sonosthesia.signal": "1.0.2",
+    "com.sonosthesia.mapping": "1.0.2"
   },
   "description": "Sonosthesia unity instrument",
   "displayName": "Sonosthesia Instrument",
