Moved targets to separate package

--- a/packages/com.sonosthesia.builder/Runtime/Sonosthesia.Builder.asmdef
+++ b/packages/com.sonosthesia.builder/Runtime/Sonosthesia.Builder.asmdef
@@ -5,7 +5,8 @@
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:21d1eb854b91ade49bc69a263d12bee2",
-        "GUID:0e73a958ea93c4999aae301d99219c62"
+        "GUID:0e73a958ea93c4999aae301d99219c62",
+        "GUID:1f7670743f37b4db48eea5bc06ad4e65"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
