--- a/packages/com.sonosthesia.visualflow/Runtime/Sonosthesia.Visualflow.asmdef
+++ b/packages/com.sonosthesia.visualflow/Runtime/Sonosthesia.Visualflow.asmdef
@@ -7,7 +7,8 @@
         "GUID:315d634a9ac6d460a9515f5a56be6311",
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2",
-        "GUID:0e73a958ea93c4999aae301d99219c62"
+        "GUID:0e73a958ea93c4999aae301d99219c62",
+        "GUID:1f7670743f37b4db48eea5bc06ad4e65"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
