--- a/packages/com.sonosthesia.builder/package.json
+++ b/packages/com.sonosthesia.builder/package.json
@@ -4,7 +4,8 @@
     "com.unity.splines": "2.2.1",
     "com.unity.mathematics": "1.2.6",
     "com.unity.burst": "1.8.4",
-    "com.sonosthesia.utils": "1.0.2"
+    "com.sonosthesia.utils": "1.0.2",
+    "com.sonosthesia.target": "1.0.2"
   },
   "description": "Sonosthesia unity builder",
   "displayName": "Sonosthesia Builder",
