--- a/packages/com.sonosthesia.spawn/Runtime/Sonosthesia.Spawn.asmdef
+++ b/packages/com.sonosthesia.spawn/Runtime/Sonosthesia.Spawn.asmdef
@@ -10,7 +10,8 @@
         "GUID:0e73a958ea93c4999aae301d99219c62",
         "GUID:319f02148647a4150b5487ff70ad53bc",
         "GUID:f09d8d2cfc85540a095af5db6fd137f0",
-        "GUID:f595e25fc172842b8a8407f5147afe15"
+        "GUID:f595e25fc172842b8a8407f5147afe15",
+        "GUID:1f7670743f37b4db48eea5bc06ad4e65"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
