--- a/packages/com.sonosthesia.vfx/package.json
+++ b/packages/com.sonosthesia.vfx/package.json
@@ -4,6 +4,7 @@
     "com.neuecc.unirx": "7.1.0",
     "com.sonosthesia.channel": "1.0.2",
     "com.sonosthesia.signal": "1.0.2",
+    "com.sonosthesia.target": "1.0.2",
     "com.sonosthesia.spawn": "1.0.2"
   },
   "description": "Sonosthesia vfx",
