--- a/unity/UnityProject/Packages/manifest.json
+++ b/unity/UnityProject/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.sonosthesia.rtmidi": "file:../../../packages/com.sonosthesia.rtmidi",
     "com.sonosthesia.spawn": "file:../../../packages/com.sonosthesia.spawn",
     "com.sonosthesia.touch": "file:../../../packages/com.sonosthesia.touch",
+    "com.sonosthesia.target": "file:../../../packages/com.sonosthesia.target",
     "com.sonosthesia.utils": "file:../../../packages/com.sonosthesia.utils",
     "com.sonosthesia.visualflow": "file:../../../packages/com.sonosthesia.visualflow",
     "com.sonosthesia.processing": "file:../../../packages/com.sonosthesia.processing",
