Align package.json

--- a/packages/com.sonosthesia.mapping/package.json
+++ b/packages/com.sonosthesia.mapping/package.json
@@ -11,10 +11,10 @@
   "keywords": [
     "unity"
   ],
-  "license": "Unlicense",
+  "license": "MIT",
   "name": "com.sonosthesia.mapping",
   "repository": "github:jbat100/sonosthesia-unity-packages",
-  "unity": "2021.3",
+  "unity": "2022.3",
   "unityRelease": "28f1",
   "version": "1.1.0"
 }
