--- a/packages/com.sonosthesia.link/package.json
+++ b/packages/com.sonosthesia.link/package.json
@@ -14,10 +14,10 @@
   "keywords": [
     "unity"
   ],
-  "license": "Unlicense",
+  "license": "MIT",
   "name": "com.sonosthesia.link",
-  "repository": "github:jbat100/sonosthesia-unity-link",
-  "unity": "2021.3",
+  "repository": "github:jbat100/sonosthesia-unity-packages",
+  "unity": "2022.3",
   "unityRelease": "28f1",
   "version": "1.1.0"
 }
