--- a/packages/com.sonosthesia.timelinemidi/package.json
+++ b/packages/com.sonosthesia.timelinemidi/package.json
@@ -9,10 +9,10 @@
   "keywords": [
     "unity"
   ],
-  "license": "Unlicense",
+  "license": "MIT",
   "name": "com.sonosthesia.timelinemidi",
-  "repository": "github:jbat100/sonosthesia-unity-timelinemidi",
-  "unity": "2022.2",
+  "repository": "github:jbat100/sonosthesia-unity-packages",
+  "unity": "2022.3",
   "unityRelease": "0f1",
   "version": "1.1.0"
 }
