--- a/packages/com.sonosthesia.touch/package.json
+++ b/packages/com.sonosthesia.touch/package.json
@@ -12,10 +12,10 @@
   "keywords": [
     "unity"
   ],
-  "license": "Unlicense",
+  "license": "MIT",
   "name": "com.sonosthesia.touch",
-  "repository": "github:jbat100/sonosthesia-unity-touch",
-  "unity": "2021.3",
+  "repository": "github:jbat100/sonosthesia-unity-packages",
+  "unity": "2022.3",
   "unityRelease": "28f1",
   "version": "1.1.0"
 }
