--- a/packages/com.sonosthesia.pack/package.json
+++ b/packages/com.sonosthesia.pack/package.json
@@ -5,7 +5,8 @@
     "com.neuecc.unirx": "7.1.0",
     "com.sonosthesia.channel": "1.1.0",
     "com.sonosthesia.signal": "1.1.0",
-    "com.sonosthesia.midi": "1.1.0",
+    "com.sonosthesia.adaptivemidi": "1.1.0",
+    "com.sonosthesia.mapping": "1.1.0",
     "com.sonosthesia.utils": "1.1.0"
   },
   "description": "Sonosthesia unity message pack connections",
