--- a/packages/com.sonosthesia.deform/package.json
+++ b/packages/com.sonosthesia.deform/package.json
@@ -7,7 +7,8 @@
     "com.sonosthesia.mesh": "1.1.0",
     "com.sonosthesia.noise": "1.1.0",
     "com.sonosthesia.signal": "1.1.0",
-    "com.sonosthesia.target": "1.1.0"
+    "com.sonosthesia.target": "1.1.0",
+    "com.sonosthesia.utils": "1.1.0"
   },
   "description": "Sonosthesia unity deform",
   "displayName": "Sonosthesia Deform",
