--- a/packages/com.sonosthesia.flow/package.json
+++ b/packages/com.sonosthesia.flow/package.json
@@ -4,7 +4,8 @@
     "com.neuecc.unirx": "7.1.0",
     "com.sonosthesia.utils": "1.1.0",
     "com.sonosthesia.signal": "1.1.0",
-    "com.sonosthesia.processing": "1.1.0"
+    "com.sonosthesia.processing": "1.1.0",
+    "com.sonosthesia.mapping": "1.1.0"
   },
   "description": "Sonosthesia unity flow",
   "displayName": "Sonosthesia Flow",
