--- a/unity/UnityProject/Packages/manifest.json
+++ b/unity/UnityProject/Packages/manifest.json
@@ -1,32 +1,28 @@
 {
   "dependencies": {
-    "com.sonosthesia.adaptivemidi": "file:../../../packages/com.sonosthesia.adaptivemidi",
-    "com.sonosthesia.audio": "file:../../../packages/com.sonosthesia.audio",
-    "com.sonosthesia.arpeggiator": "file:../../../packages/com.sonosthesia.arpeggiator",
-    "com.sonosthesia.channel": "file:../../../packages/com.sonosthesia.channel",
-    "com.sonosthesia.deform": "file:../../../packages/com.sonosthesia.deform",
-    "com.sonosthesia.fractal": "file:../../../packages/com.sonosthesia.fractal",
-    "com.sonosthesia.flow": "file:../../../packages/com.sonosthesia.flow",
-    "com.sonosthesia.generator": "file:../../../packages/com.sonosthesia.generator",
-    "com.sonosthesia.instrument": "file:../../../packages/com.sonosthesia.instrument",
-    "com.sonosthesia.mapping": "file:../../../packages/com.sonosthesia.mapping",
-    "com.sonosthesia.noise": "file:../../../packages/com.sonosthesia.noise",
-    "com.sonosthesia.link": "file:../../../packages/com.sonosthesia.link",
-    "com.sonosthesia.mesh": "file:../../../packages/com.sonosthesia.mesh",
-    "com.sonosthesia.midi": "file:../../../packages/com.sonosthesia.midi",
-    "com.sonosthesia.pack": "file:../../../packages/com.sonosthesia.pack",
-    "com.sonosthesia.rtmidi": "file:../../../packages/com.sonosthesia.rtmidi",
-    "com.sonosthesia.sequencer": "file:../../../packages/com.sonosthesia.sequencer",
-    "com.sonosthesia.shape": "file:../../../packages/com.sonosthesia.shape",
-    "com.sonosthesia.signal": "file:../../../packages/com.sonosthesia.signal",
-    "com.sonosthesia.spawn": "file:../../../packages/com.sonosthesia.spawn",
-    "com.sonosthesia.touch": "file:../../../packages/com.sonosthesia.touch",
-    "com.sonosthesia.target": "file:../../../packages/com.sonosthesia.target",
-    "com.sonosthesia.utils": "file:../../../packages/com.sonosthesia.utils",
-    "com.sonosthesia.visualflow": "file:../../../packages/com.sonosthesia.visualflow",
-    "com.sonosthesia.processing": "file:../../../packages/com.sonosthesia.processing",
-    "com.sonosthesia.vfx": "file:../../../packages/com.sonosthesia.vfx",
-    "com.sonosthesia.voxel": "file:../../../packages/com.sonosthesia.voxel",
+    "com.sonosthesia.adaptivemidi": "1.2.0",
+    "com.sonosthesia.audio": "1.2.0",
+    "com.sonosthesia.arpeggiator": "1.2.0",
+    "com.sonosthesia.channel": "1.2.0",
+    "com.sonosthesia.deform": "1.2.0",
+    "com.sonosthesia.flow": "1.2.0",
+    "com.sonosthesia.generator": "1.2.0",
+    "com.sonosthesia.instrument": "1.2.0",
+    "com.sonosthesia.mapping": "1.2.0",
+    "com.sonosthesia.noise": "1.2.0",
+    "com.sonosthesia.link": "1.2.0",
+    "com.sonosthesia.mesh": "1.2.0",
+    "com.sonosthesia.midi": "1.2.0",
+    "com.sonosthesia.pack": "1.2.0",
+    "com.sonosthesia.rtmidi": "1.2.0",
+    "com.sonosthesia.sequencer": "1.2.0",
+    "com.sonosthesia.signal": "1.2.0",
+    "com.sonosthesia.spawn": "1.2.0",
+    "com.sonosthesia.touch": "1.2.0",
+    "com.sonosthesia.target": "1.2.0",
+    "com.sonosthesia.utils": "1.2.0",
+    "com.sonosthesia.processing": "1.2.0",
+    "com.sonosthesia.vfx": "1.2.0",
     "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.0.4",
     "com.unity.ide.rider": "3.0.21",
