--- a/packages/com.sonosthesia.channelui/package.json
+++ b/packages/com.sonosthesia.channelui/package.json
@@ -2,7 +2,8 @@
   "author": "Jonathan Thorpe",
   "dependencies": {
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.ui": "1.2.0"
+    "com.sonosthesia.ui": "1.2.0",
+    "com.sonosthesia.channel": "1.2.0"
   },
   "description": "Sonosthesia unity channel ui",
   "displayName": "Sonosthesia Channel UI",
