--- a/packages/com.sonosthesia.metronome/Runtime/Sonosthesia.Metronome.asmdef
+++ b/packages/com.sonosthesia.metronome/Runtime/Sonosthesia.Metronome.asmdef
@@ -6,7 +6,8 @@
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2",
         "GUID:0e73a958ea93c4999aae301d99219c62",
-        "GUID:6c6dc842e821b4881bee7a84bbd34b94"
+        "GUID:6c6dc842e821b4881bee7a84bbd34b94",
+        "GUID:e34cfbf594f6143eca45627dd2ac29fe"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
