--- a/packages/com.sonosthesia.xr/package.json
+++ b/packages/com.sonosthesia.xr/package.json
@@ -1,7 +1,9 @@
 {
   "author": "Jonathan Thorpe",
   "dependencies": {
-    "com.neuecc.unirx": "7.1.0"
+    "com.neuecc.unirx": "7.1.0",
+    "com.unity.xr.hands": "1.3.0",
+    "com.sonosthesia.instrument": "1.3.0"
   },
   "description": "Sonosthesia unity xr",
   "displayName": "Sonosthesia XR",
