--- a/packages/com.sonosthesia.touch/Runtime/Sonosthesia.Touch.asmdef
+++ b/packages/com.sonosthesia.touch/Runtime/Sonosthesia.Touch.asmdef
@@ -7,7 +7,8 @@
         "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2",
         "GUID:0e73a958ea93c4999aae301d99219c62",
         "GUID:319f02148647a4150b5487ff70ad53bc",
-        "GUID:f09d8d2cfc85540a095af5db6fd137f0"
+        "GUID:f09d8d2cfc85540a095af5db6fd137f0",
+        "GUID:e34cfbf594f6143eca45627dd2ac29fe"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
