--- a/packages/com.sonosthesia.visualflow/package.json
+++ b/packages/com.sonosthesia.visualflow/package.json
@@ -4,7 +4,8 @@
     "com.neuecc.unirx": "7.1.0",
     "com.sonosthesia.utils": "1.3.0",
     "com.sonosthesia.signal": "1.3.0",
-    "com.sonosthesia.channel": "1.3.0"
+    "com.sonosthesia.channel": "1.3.0",
+    "com.sonosthesia.target": "1.3.0"
   },
   "description": "Sonosthesia unity visual flow",
   "displayName": "Sonosthesia Visual Flow",
