--- a/tools/package.json
+++ b/tools/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "args-parser": "^1.3.0",
+    "chalk": "^4.1.2",
+    "glob": "^10.3.10",
+    "memoizee": "^0.4.15",
     "prettyjson": "^1.2.5",
-    "semver": "^7.5.4"
+    "semver": "^7.5.4",
+    "yaml": "^2.3.4"
   }
 }
