Fixed build errors

--- a/packages/com.sonosthesia.midi/Runtime/Sonosthesia.MIDI.asmdef
+++ b/packages/com.sonosthesia.midi/Runtime/Sonosthesia.MIDI.asmdef
@@ -9,7 +9,8 @@
         "GUID:319f02148647a4150b5487ff70ad53bc",
         "GUID:f09d8d2cfc85540a095af5db6fd137f0",
         "GUID:261a4ad7d591a4e7b8d82c44efbe84c9",
-        "GUID:e34cfbf594f6143eca45627dd2ac29fe"
+        "GUID:e34cfbf594f6143eca45627dd2ac29fe",
+        "GUID:00053512b7993443db285a1ae1060dfd"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
