--- a/packages/com.sonosthesia.midi/package.json
+++ b/packages/com.sonosthesia.midi/package.json
@@ -7,7 +7,8 @@
     "com.sonosthesia.signal": "1.6.0",
     "com.sonosthesia.mapping": "1.6.0",
     "com.sonosthesia.sequencer": "1.6.0",
-    "com.sonosthesia.flow": "1.6.0"
+    "com.sonosthesia.flow": "1.6.0",
+    "com.sonosthesia.trigger": "1.6.0"
   },
   "description": "Sonosthesia unity midi",
   "displayName": "Sonosthesia MIDI",
