Generic triggerable value affordances

--- a/packages/com.sonosthesia.touch/package.json
+++ b/packages/com.sonosthesia.touch/package.json
@@ -7,7 +7,8 @@
     "com.sonosthesia.channel": "1.7.0",
     "com.sonosthesia.mapping": "1.7.0",
     "com.sonosthesia.utils": "1.7.0",
-    "com.sonosthesia.flow": "1.7.0"
+    "com.sonosthesia.flow": "1.7.0",
+    "com.sonosthesia.trigger": "1.7.0"
   },
   "description": "Sonosthesia unity touch",
   "displayName": "Sonosthesia Touch",
