Reorganised proximity files and added haptic proximity affordance

--- a/packages/com.sonosthesia.haptic/Runtime/Sonosthesia.Haptic.asmdef
+++ b/packages/com.sonosthesia.haptic/Runtime/Sonosthesia.Haptic.asmdef
@@ -1,16 +1,18 @@
 {
-  "name": "Sonosthesia.Haptic",
-  "rootNamespace": "Sonosthesia.Haptic",
-  "references": [
-    "GUID:560b04d1a97f54a4e82edc0cbbb69285"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": true,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "Sonosthesia.Haptic",
+    "rootNamespace": "Sonosthesia.Haptic",
+    "references": [
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:fe685ec1767f73d42b749ea8045bfe43"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": true,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
