--- a/packages/com.sonosthesia.proximity/package.json
+++ b/packages/com.sonosthesia.proximity/package.json
@@ -2,7 +2,9 @@
   "author": "Jonathan Thorpe",
   "dependencies": {
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.utils": "1.7.0"
+    "com.cysharp.unitask": "2.5.2",
+    "com.sonosthesia.utils": "1.7.0",
+    "com.sonosthesia.haptic": "1.7.0"
   },
   "description": "Sonosthesia unity proximity",
   "displayName": "Sonosthesia Proximity",
