--- a/packages/com.sonosthesia.instrument/Runtime/Sonosthesia.Instrument.asmdef
+++ b/packages/com.sonosthesia.instrument/Runtime/Sonosthesia.Instrument.asmdef
@@ -13,7 +13,8 @@
         "GUID:319f02148647a4150b5487ff70ad53bc",
         "GUID:f09d8d2cfc85540a095af5db6fd137f0",
         "GUID:dd6e19b0338b5794bbc76fd73cfd172e",
-        "GUID:1fd512b3b6c091f43bedec2c48831e94"
+        "GUID:1fd512b3b6c091f43bedec2c48831e94",
+        "GUID:dba3931124f22634593d24bf8e6723eb"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
