--- a/packages/com.sonosthesia.instrument/package.json
+++ b/packages/com.sonosthesia.instrument/package.json
@@ -9,7 +9,9 @@
     "com.sonosthesia.signal": "1.7.0",
     "com.sonosthesia.mapping": "1.7.0",
     "com.sonosthesia.pointer": "1.7.0",
-    "com.sonosthesia.interaction": "1.7.0"
+    "com.sonosthesia.interaction": "1.7.0",
+    "com.sonosthesia.scaffold": "1.7.0",
+    "com.sonosthesia.utils": "1.7.0"
   },
   "description": "Sonosthesia unity instrument",
   "displayName": "Sonosthesia Instrument",
