--- a/packages/com.sonosthesia.scaffold/Editor/Sonosthesia.Scaffold.Editor.asmdef
+++ b/packages/com.sonosthesia.scaffold/Editor/Sonosthesia.Scaffold.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Sonosthesia.Instrument.Editor",
+    "name": "Sonosthesia.Scaffold.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:d8b63aba1907145bea998dd612889d6b",
