--- a/packages/com.sonosthesia.scaffold/Runtime/Sonosthesia.Scaffold.asmdef
+++ b/packages/com.sonosthesia.scaffold/Runtime/Sonosthesia.Scaffold.asmdef
@@ -1,16 +1,19 @@
 {
-  "name": "Sonosthesia.Scaffold",
-  "rootNamespace": "Sonosthesia.Scaffold",
-  "references": [
-    "GUID:560b04d1a97f54a4e82edc0cbbb69285"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": true,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "Sonosthesia.Scaffold",
+    "rootNamespace": "Sonosthesia.Scaffold",
+    "references": [
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:21d1eb854b91ade49bc69a263d12bee2",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": true,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
