--- a/packages/com.sonosthesia.scaffold/package.json
+++ b/packages/com.sonosthesia.scaffold/package.json
@@ -1,7 +1,9 @@
 {
   "author": "Jonathan Thorpe",
   "dependencies": {
-    "com.neuecc.unirx": "7.1.0"
+    "com.unity.splines": "2.5.1",
+    "com.neuecc.unirx": "7.1.0",
+    "com.sonosthesia.utils": "1.7.0"
   },
   "description": "Sonosthesia unity scaffold",
   "displayName": "Sonosthesia Scaffold",
