--- a/packages/com.sonosthesia.mesh/Runtime/Sonosthesia.Mesh.asmdef
+++ b/packages/com.sonosthesia.mesh/Runtime/Sonosthesia.Mesh.asmdef
@@ -2,6 +2,7 @@
     "name": "Sonosthesia.Mesh",
     "rootNamespace": "",
     "references": [
+        "GUID:21d1eb854b91ade49bc69a263d12bee2",
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:2665a8d13d1b3f18800f46e256720795"
     ],
