--- a/packages/com.sonosthesia.xr/package.json
+++ b/packages/com.sonosthesia.xr/package.json
@@ -1,10 +1,12 @@
 {
   "author": "Jonathan Thorpe",
   "dependencies": {
-    "com.neuecc.unirx": "7.1.0",
+    "com.unity.splines": "2.5.1",
     "com.unity.xr.hands": "1.3.0",
     "com.unity.xr.interaction.toolkit": "2.5.3",
-    "com.sonosthesia.utils": "1.7.0"
+    "com.neuecc.unirx": "7.1.0",
+    "com.sonosthesia.utils": "1.7.0",
+    "com.sonosthesia.scaffold": "1.7.0"
   },
   "description": "Sonosthesia unity xr",
   "displayName": "Sonosthesia XR",
