--- a/packages/com.sonosthesia.vfx/Runtime/Sonosthesia.VFX.asmdef
+++ b/packages/com.sonosthesia.vfx/Runtime/Sonosthesia.VFX.asmdef
@@ -7,7 +7,8 @@
         "GUID:9ae4e48213dc844d79ea0c712e4b45ed",
         "GUID:0e73a958ea93c4999aae301d99219c62",
         "GUID:319f02148647a4150b5487ff70ad53bc",
-        "GUID:1f7670743f37b4db48eea5bc06ad4e65"
+        "GUID:1f7670743f37b4db48eea5bc06ad4e65",
+        "GUID:124ed27b5fec441139fc96ad76f1b7b4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
