--- a/packages/com.sonosthesia.mesh/package.json
+++ b/packages/com.sonosthesia.mesh/package.json
@@ -3,7 +3,9 @@
   "dependencies": {
     "com.unity.splines": "2.5.2",
     "com.unity.mathematics": "1.2.6",
-    "com.unity.burst": "1.8.13"
+    "com.unity.burst": "1.8.13",
+    "com.neuecc.unirx": "7.1.0",
+    "com.sonosthesia.utils": "1.7.0"
   },
   "description": "Sonosthesia unity mesh",
   "displayName": "Sonosthesia Mesh",
