--- a/packages/com.sonosthesia.timeline/Runtime/Sonosthesia.Timeline.asmdef
+++ b/packages/com.sonosthesia.timeline/Runtime/Sonosthesia.Timeline.asmdef
@@ -2,8 +2,10 @@
     "name": "Sonosthesia.Timeline",
     "rootNamespace": "Sonosthesia.Timeline",
     "references": [
+        "GUID:f06555f75b070af458a003d92f9efb00",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
-        "GUID:0e73a958ea93c4999aae301d99219c62"
+        "GUID:0e73a958ea93c4999aae301d99219c62",
+        "GUID:00053512b7993443db285a1ae1060dfd"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
