--- a/packages/com.sonosthesia.timeline/package.json
+++ b/packages/com.sonosthesia.timeline/package.json
@@ -1,8 +1,10 @@
 {
   "author": "Jonathan Thorpe",
   "dependencies": {
+    "com.unity.timeline": "1.8.2",
     "com.neuecc.unirx": "7.1.0",
-    "com.sonosthesia.signal": "1.7.0"
+    "com.sonosthesia.signal": "1.7.0",
+    "com.sonosthesia.trigger": "1.7.0"
   },
   "description": "Sonosthesia unity timeline",
   "displayName": "Sonosthesia Timeline",
