--- a/unity/UnityProject/Packages/manifest.json
+++ b/unity/UnityProject/Packages/manifest.json
@@ -8,37 +8,40 @@
     "com.sonosthesia.flow": "file:../../../packages/com.sonosthesia.flow",
     "com.sonosthesia.generator": "file:../../../packages/com.sonosthesia.generator",
     "com.sonosthesia.instrument": "file:../../../packages/com.sonosthesia.instrument",
+    "com.sonosthesia.interaction": "file:../../../packages/com.sonosthesia.interaction",
     "com.sonosthesia.link": "file:../../../packages/com.sonosthesia.link",
     "com.sonosthesia.mapping": "file:../../../packages/com.sonosthesia.mapping",
     "com.sonosthesia.mesh": "file:../../../packages/com.sonosthesia.mesh",
     "com.sonosthesia.midi": "file:../../../packages/com.sonosthesia.midi",
     "com.sonosthesia.noise": "file:../../../packages/com.sonosthesia.noise",
     "com.sonosthesia.pack": "file:../../../packages/com.sonosthesia.pack",
+    "com.sonosthesia.pointer": "file:../../../packages/com.sonosthesia.pointer",
     "com.sonosthesia.processing": "file:../../../packages/com.sonosthesia.processing",
     "com.sonosthesia.rtmidi": "file:../../../packages/com.sonosthesia.rtmidi",
+    "com.sonosthesia.scaffold": "file:../../../packages/com.sonosthesia.scaffold",
     "com.sonosthesia.sequencer": "file:../../../packages/com.sonosthesia.sequencer",
     "com.sonosthesia.signal": "file:../../../packages/com.sonosthesia.signal",
     "com.sonosthesia.spawn": "file:../../../packages/com.sonosthesia.spawn",
     "com.sonosthesia.target": "file:../../../packages/com.sonosthesia.target",
+    "com.sonosthesia.timeline": "file:../../../packages/com.sonosthesia.timeline",
     "com.sonosthesia.touch": "file:../../../packages/com.sonosthesia.touch",
     "com.sonosthesia.trigger": "file:../../../packages/com.sonosthesia.trigger",
-    "com.sonosthesia.timeline": "file:../../../packages/com.sonosthesia.timeline",
     "com.sonosthesia.utils": "file:../../../packages/com.sonosthesia.utils",
     "com.sonosthesia.vfx": "file:../../../packages/com.sonosthesia.vfx",
     "com.unity.cinemachine": "2.9.5",
-    "com.unity.collab-proxy": "2.2.0",
-    "com.unity.ide.rider": "3.0.27",
+    "com.unity.collab-proxy": "2.3.1",
+    "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.recorder": "4.0.2",
-    "com.unity.render-pipelines.universal": "14.0.9",
+    "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualeffectgraph": "14.0.9",
-    "com.unity.visualscripting": "1.9.1",
+    "com.unity.visualeffectgraph": "14.0.11",
+    "com.unity.visualscripting": "1.9.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
