--- a/packages/com.sonosthesia.audio/Runtime/Sonosthesia.Audio.asmdef
+++ b/packages/com.sonosthesia.audio/Runtime/Sonosthesia.Audio.asmdef
@@ -8,7 +8,8 @@
         "GUID:5e5de655b35d84bd7a36486ee1824671",
         "GUID:0e73a958ea93c4999aae301d99219c62",
         "GUID:e34cfbf594f6143eca45627dd2ac29fe",
-        "GUID:285f4ff540a1a4ccebfd58976cdd5a94"
+        "GUID:285f4ff540a1a4ccebfd58976cdd5a94",
+        "GUID:00053512b7993443db285a1ae1060dfd"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
