--- a/packages/com.sonosthesia.audio/package.json
+++ b/packages/com.sonosthesia.audio/package.json
@@ -7,7 +7,8 @@
     "com.sonosthesia.utils": "1.8.0",
     "com.sonosthesia.processing": "1.8.0",
     "com.sonosthesia.flow": "1.8.0",
-    "com.sonosthesia.pack": "1.8.0"
+    "com.sonosthesia.pack": "1.8.0",
+    "com.sonosthesia.trigger": "1.8.0"
   },
   "description": "Sonosthesia unity audio",
   "displayName": "Sonosthesia Audio",
