--- a/packages/com.sonosthesia.generator/package.json
+++ b/packages/com.sonosthesia.generator/package.json
@@ -4,7 +4,8 @@
     "com.neuecc.unirx": "7.1.0",
     "com.sonosthesia.utils": "1.8.0",
     "com.sonosthesia.processing": "1.8.0",
-    "com.sonosthesia.signal": "1.8.0"
+    "com.sonosthesia.signal": "1.8.0",
+    "com.sonosthesia.ease": "1.8.0"
   },
   "description": "Sonosthesia unity generator",
   "displayName": "Sonosthesia Generator",
