--- a/packages/com.sonosthesia.ease/Runtime/Sonosthesia.Ease.asmdef
+++ b/packages/com.sonosthesia.ease/Runtime/Sonosthesia.Ease.asmdef
@@ -1,16 +1,17 @@
 {
-  "name": "Sonosthesia.Ease",
-  "rootNamespace": "Sonosthesia.Ease",
-  "references": [
-    "GUID:560b04d1a97f54a4e82edc0cbbb69285"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": true,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "Sonosthesia.Ease",
+    "rootNamespace": "Sonosthesia.Ease",
+    "references": [
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": true,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
