Reactor prefab package and integrated pre processing for peak detector

--- a/packages/com.sonosthesia.trigger/Runtime/Sonosthesia.Trigger.asmdef
+++ b/packages/com.sonosthesia.trigger/Runtime/Sonosthesia.Trigger.asmdef
@@ -7,7 +7,8 @@
         "GUID:319f02148647a4150b5487ff70ad53bc",
         "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2",
         "GUID:de4dcd08e5eeb44799299f227cdc3474",
-        "GUID:e34cfbf594f6143eca45627dd2ac29fe"
+        "GUID:e34cfbf594f6143eca45627dd2ac29fe",
+        "GUID:5e5de655b35d84bd7a36486ee1824671"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
