Various application utils

--- a/packages/com.sonosthesia.application/Runtime/Sonosthesia.Application.asmdef
+++ b/packages/com.sonosthesia.application/Runtime/Sonosthesia.Application.asmdef
@@ -2,6 +2,7 @@
     "name": "Sonosthesia.Application",
     "rootNamespace": "Sonosthesia.Application",
     "references": [
+        "GUID:f06555f75b070af458a003d92f9efb00",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2",
