Relinked material package graphs and subgraphs

--- a/unity/UnityProject/Packages/manifest.json
+++ b/unity/UnityProject/Packages/manifest.json
@@ -5,18 +5,24 @@
     "com.sonosthesia.audio": "file:../../../packages/com.sonosthesia.audio",
     "com.sonosthesia.channel": "file:../../../packages/com.sonosthesia.channel",
     "com.sonosthesia.deform": "file:../../../packages/com.sonosthesia.deform",
+    "com.sonosthesia.ease": "file:../../../packages/com.sonosthesia.ease",
     "com.sonosthesia.flow": "file:../../../packages/com.sonosthesia.flow",
     "com.sonosthesia.generator": "file:../../../packages/com.sonosthesia.generator",
+    "com.sonosthesia.haptic": "file:../../../packages/com.sonosthesia.haptic",
     "com.sonosthesia.instrument": "file:../../../packages/com.sonosthesia.instrument",
     "com.sonosthesia.interaction": "file:../../../packages/com.sonosthesia.interaction",
     "com.sonosthesia.link": "file:../../../packages/com.sonosthesia.link",
     "com.sonosthesia.mapping": "file:../../../packages/com.sonosthesia.mapping",
+    "com.sonosthesia.material": "file:../../../packages/com.sonosthesia.material",
     "com.sonosthesia.mesh": "file:../../../packages/com.sonosthesia.mesh",
     "com.sonosthesia.midi": "file:../../../packages/com.sonosthesia.midi",
     "com.sonosthesia.noise": "file:../../../packages/com.sonosthesia.noise",
     "com.sonosthesia.pack": "file:../../../packages/com.sonosthesia.pack",
+    "com.sonosthesia.palette": "file:../../../packages/com.sonosthesia.palette",
     "com.sonosthesia.pointer": "file:../../../packages/com.sonosthesia.pointer",
     "com.sonosthesia.processing": "file:../../../packages/com.sonosthesia.processing",
+    "com.sonosthesia.proximity": "file:../../../packages/com.sonosthesia.proximity",
+    "com.sonosthesia.reactor": "file:../../../packages/com.sonosthesia.reactor",
     "com.sonosthesia.rtmidi": "file:../../../packages/com.sonosthesia.rtmidi",
     "com.sonosthesia.scaffold": "file:../../../packages/com.sonosthesia.scaffold",
     "com.sonosthesia.sequencer": "file:../../../packages/com.sonosthesia.sequencer",
@@ -25,10 +31,11 @@
     "com.sonosthesia.target": "file:../../../packages/com.sonosthesia.target",
     "com.sonosthesia.timeline": "file:../../../packages/com.sonosthesia.timeline",
     "com.sonosthesia.touch": "file:../../../packages/com.sonosthesia.touch",
+    "com.sonosthesia.trajectory": "file:../../../packages/com.sonosthesia.trajectory",
     "com.sonosthesia.trigger": "file:../../../packages/com.sonosthesia.trigger",
     "com.sonosthesia.utils": "file:../../../packages/com.sonosthesia.utils",
     "com.sonosthesia.vfx": "file:../../../packages/com.sonosthesia.vfx",
-    "com.unity.cinemachine": "2.9.5",
+    "com.unity.cinemachine": "2.10.0",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
@@ -41,7 +48,7 @@
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "14.0.11",
-    "com.unity.visualscripting": "1.9.2",
+    "com.unity.visualscripting": "1.9.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
