--- a/unity/UnityProject/Packages/manifest.json
+++ b/unity/UnityProject/Packages/manifest.json
@@ -1,40 +1,40 @@
 {
   "dependencies": {
-    "com.sonosthesia.adaptivemidi": "1.9.0",
-    "com.sonosthesia.arpeggiator": "1.9.0",
-    "com.sonosthesia.audio": "1.9.0",
-    "com.sonosthesia.channel": "1.9.0",
-    "com.sonosthesia.deform": "1.9.0",
-    "com.sonosthesia.ease": "1.9.0",
-    "com.sonosthesia.flow": "1.9.0",
-    "com.sonosthesia.generator": "1.9.0",
-    "com.sonosthesia.haptic": "1.9.0",
-    "com.sonosthesia.instrument": "1.9.0",
-    "com.sonosthesia.interaction": "1.9.0",
-    "com.sonosthesia.link": "1.9.0",
-    "com.sonosthesia.mapping": "1.9.0",
-    "com.sonosthesia.material": "1.9.0",
-    "com.sonosthesia.mesh": "1.9.0",
-    "com.sonosthesia.midi": "1.9.0",
-    "com.sonosthesia.noise": "1.9.0",
-    "com.sonosthesia.pack": "1.9.0",
-    "com.sonosthesia.palette": "1.9.0",
-    "com.sonosthesia.pointer": "1.9.0",
-    "com.sonosthesia.processing": "1.9.0",
-    "com.sonosthesia.proximity": "1.9.0",
-    "com.sonosthesia.reactor": "1.9.0",
-    "com.sonosthesia.rtmidi": "1.9.0",
-    "com.sonosthesia.scaffold": "1.9.0",
-    "com.sonosthesia.sequencer": "1.9.0",
-    "com.sonosthesia.signal": "1.9.0",
-    "com.sonosthesia.spawn": "1.9.0",
-    "com.sonosthesia.target": "1.9.0",
-    "com.sonosthesia.timeline": "1.9.0",
-    "com.sonosthesia.touch": "1.9.0",
-    "com.sonosthesia.trajectory": "1.9.0",
-    "com.sonosthesia.trigger": "1.9.0",
-    "com.sonosthesia.utils": "1.9.0",
-    "com.sonosthesia.vfx": "1.9.0",
+    "com.sonosthesia.adaptivemidi": "file:../../../packages/com.sonosthesia.adaptivemidi",
+    "com.sonosthesia.arpeggiator": "file:../../../packages/com.sonosthesia.arpeggiator",
+    "com.sonosthesia.audio": "file:../../../packages/com.sonosthesia.audio",
+    "com.sonosthesia.channel": "file:../../../packages/com.sonosthesia.channel",
+    "com.sonosthesia.deform": "file:../../../packages/com.sonosthesia.deform",
+    "com.sonosthesia.ease": "file:../../../packages/com.sonosthesia.ease",
+    "com.sonosthesia.flow": "file:../../../packages/com.sonosthesia.flow",
+    "com.sonosthesia.generator": "file:../../../packages/com.sonosthesia.generator",
+    "com.sonosthesia.haptic": "file:../../../packages/com.sonosthesia.haptic",
+    "com.sonosthesia.instrument": "file:../../../packages/com.sonosthesia.instrument",
+    "com.sonosthesia.interaction": "file:../../../packages/com.sonosthesia.interaction",
+    "com.sonosthesia.link": "file:../../../packages/com.sonosthesia.link",
+    "com.sonosthesia.mapping": "file:../../../packages/com.sonosthesia.mapping",
+    "com.sonosthesia.material": "file:../../../packages/com.sonosthesia.material",
+    "com.sonosthesia.mesh": "file:../../../packages/com.sonosthesia.mesh",
+    "com.sonosthesia.midi": "file:../../../packages/com.sonosthesia.midi",
+    "com.sonosthesia.noise": "file:../../../packages/com.sonosthesia.noise",
+    "com.sonosthesia.pack": "file:../../../packages/com.sonosthesia.pack",
+    "com.sonosthesia.palette": "file:../../../packages/com.sonosthesia.palette",
+    "com.sonosthesia.pointer": "file:../../../packages/com.sonosthesia.pointer",
+    "com.sonosthesia.processing": "file:../../../packages/com.sonosthesia.processing",
+    "com.sonosthesia.proximity": "file:../../../packages/com.sonosthesia.proximity",
+    "com.sonosthesia.reactor": "file:../../../packages/com.sonosthesia.reactor",
+    "com.sonosthesia.rtmidi": "file:../../../packages/com.sonosthesia.rtmidi",
+    "com.sonosthesia.scaffold": "file:../../../packages/com.sonosthesia.scaffold",
+    "com.sonosthesia.sequencer": "file:../../../packages/com.sonosthesia.sequencer",
+    "com.sonosthesia.signal": "file:../../../packages/com.sonosthesia.signal",
+    "com.sonosthesia.spawn": "file:../../../packages/com.sonosthesia.spawn",
+    "com.sonosthesia.target": "file:../../../packages/com.sonosthesia.target",
+    "com.sonosthesia.timeline": "file:../../../packages/com.sonosthesia.timeline",
+    "com.sonosthesia.touch": "file:../../../packages/com.sonosthesia.touch",
+    "com.sonosthesia.trajectory": "file:../../../packages/com.sonosthesia.trajectory",
+    "com.sonosthesia.trigger": "file:../../../packages/com.sonosthesia.trigger",
+    "com.sonosthesia.utils": "file:../../../packages/com.sonosthesia.utils",
+    "com.sonosthesia.vfx": "file:../../../packages/com.sonosthesia.vfx",
     "com.unity.cinemachine": "2.10.0",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.ide.rider": "3.0.28",
