--- a/packages/com.sonosthesia.packaudio/Runtime/Sonosthesia.PackAudio.asmdef
+++ b/packages/com.sonosthesia.packaudio/Runtime/Sonosthesia.PackAudio.asmdef
@@ -2,10 +2,11 @@
     "name": "Sonosthesia.PackAudio",
     "rootNamespace": "Sonosthesia.PackAudio",
     "references": [
+        "GUID:f06555f75b070af458a003d92f9efb00",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:9eb6837bd3e454f19a8d5c72f1eda2e1",
         "GUID:285f4ff540a1a4ccebfd58976cdd5a94",
-        "GUID:f06555f75b070af458a003d92f9efb00"
+        "GUID:0e73a958ea93c4999aae301d99219c62"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
