--- a/packages/com.sonosthesia.interaction/Runtime/Sonosthesia.Interaction.asmdef
+++ b/packages/com.sonosthesia.interaction/Runtime/Sonosthesia.Interaction.asmdef
@@ -2,6 +2,7 @@
     "name": "Sonosthesia.Interaction",
     "rootNamespace": "Sonosthesia.Interaction",
     "references": [
+        "GUID:fe685ec1767f73d42b749ea8045bfe43",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:25e5e4b6f3916462c92ecc1d0ffca2c2",
         "GUID:319f02148647a4150b5487ff70ad53bc",
