--- a/packages/com.sonosthesia.touch/package.json
+++ b/packages/com.sonosthesia.touch/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Jonathan Thorpe",
   "dependencies": {
+    "com.unity.xr.interaction.toolkit": "2.5.4",
     "com.unity.mathematics": "1.2.6",
     "com.neuecc.unirx": "7.1.0",
     "com.sonosthesia.signal": "1.10.0",
